[package]
name = "bosporus"
description = "Experiments in interacting with generative AI"
version = "0.0.1"
edition = "2024"
authors = ["Oliver Ruebenacker <oliverr@broadinstitute.org>"]
readme = "README.md"
repository = "https://github.com/broadinstitute/bosporus"
license = "BSD-3-Clause"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustyline = "15.0.0"
serde = { version = "1.0.219", features = ["derive"] }
home = "0.5.11"
log = "0.4.27"
simplelog = "0.12.2"
humantime = "2.2.0"

